# sparselab

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
csrc/: bindings.cpp
docs/: development.md
docs/demos/: milestone_15.md
docs/design/: spmm_forward_avx2.md
examples/: profile_dw_baseline.py
sparselab/: __init__.py
tests/: test_spmm.py  test_spmm_avx2.py
