# SparseLab build and metadata specification.

[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "sparselab"
version = "0.2.2"
description = "Dynamic sparse training for PyTorch, CPU-native, Apple Silicon first."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "SparseLab Contributors" }]
keywords = ["pytorch", "sparsity", "dynamic-sparse-training", "neon", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "torch>=2.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pybind11>=2.11"]
demos = ["matplotlib>=3.7", "torchvision>=0.15"]

[project.urls]
Homepage = "https://github.com/DarshanFofadiya/sparselab"
Documentation = "https://github.com/DarshanFofadiya/sparselab/tree/main/docs"
Issues = "https://github.com/DarshanFofadiya/sparselab/issues"

[tool.setuptools.packages.find]
include = ["sparselab*"]
exclude = ["tests*", "examples*", "csrc*", "docs*"]

[tool.pytest.ini_options]
# Use importlib import mode — the modern recommendation. Without this,
# pytest's legacy "prepend" mode adds the workspace root to sys.path[0],
# which makes Python discover the workspace's `sparselab/` folder as a
# namespace package BEFORE the installed editable package is resolved.
# The namespace-package view of sparselab has no __init__.py executed,
# so `from sparselab import PaddedCSR` fails with "unknown location".
# importlib mode keeps the installed package as the canonical source.
# See: https://docs.pytest.org/en/stable/explanation/pythonpath.html
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = []  # explicitly do NOT add the workspace root


# ─────────────────────────────────────────────────────────────────────
# cibuildwheel configuration.
#
# Drives the PyPI wheel build in .github/workflows/wheels.yml.
#
# Key decisions:
#   - Skip 32-bit builds and PyPy (we target CPython only).
#   - Skip musllinux (Alpine) for v0.1 — libomp on musl is its own
#     adventure. Classic glibc manylinux covers our DST audience.
#   - Bundle libomp into the wheel via repair tools:
#       Linux:  auditwheel repair (default cibuildwheel behavior)
#       macOS:  delocate-wheel (default cibuildwheel behavior)
#     Both are automatic once libomp is linked — no custom repair
#     command needed.
#   - Run a smoke test inside each wheel's environment before
#     accepting the wheel. The smoke test imports sparselab,
#     runs a forward + backward, and verifies gradients flow.
#     Full pytest suite isn't run inside the wheel env because
#     tests/ aren't shipped in the wheel.
# ─────────────────────────────────────────────────────────────────────

[tool.cibuildwheel]
# Build for CPython 3.11, 3.12, 3.13 only.
build = "cp311-* cp312-* cp313-*"
# Explicit skip list. Matches what we want even without it, but
# documents intent.
skip = [
    "*-win32",          # 32-bit Windows (we skip Windows entirely for v0.1)
    "*-manylinux_i686", # 32-bit Linux
    "*-musllinux_*",    # Alpine — libomp story is v0.2
    "pp*",              # PyPy
]

# After building each wheel, run this command inside the wheel's env
# to verify it actually loads and works.
#
# Note: cibuildwheel runs test-command from a temporary test directory
# (not the project root), so a bare relative path wouldn't resolve.
# The {project} placeholder IS substituted for test-command
# (unlike repair-wheel-command) — we verified this in cibuildwheel v2.22
# source: test_command_prepared = prepare_command(
#     build_options.test_command,
#     project=Path(".").resolve(),
#     package=build_options.package_dir.resolve(),
#     wheel=repaired_wheel)
# so {project} and {package} both work here.
#
# On Linux this resolves to the mount path inside the manylinux
# container (typically /project). Using $GITHUB_WORKSPACE here breaks
# Linux builds because the container doesn't inherit the host
# runner's environment.
test-command = "python {project}/scripts/smoke_test.py"
# Install torch at test time (our dependency, but we want the wheel env
# to install it fresh, not carry it over from build).
# This mirrors what a real user's `pip install sparselab` will do.
test-requires = []

# ─── macOS-specific configuration ─────────────────────────────────
[tool.cibuildwheel.macos]
# Minimum macOS version we build against. 11.0 = Big Sur = the oldest
# OS that supports arm64 natively. Setting MACOSX_DEPLOYMENT_TARGET
# locks the wheel to work on this-or-newer.
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
# Install libomp + torch before each build so setup.py can find libomp
# headers and link against torch's bundled libomp.dylib via rpath.
before-build = [
    "brew install libomp || true",
    "pip install torch>=2.8",
]
# The crux of the macOS story: PyTorch's wheel ships its own libomp.dylib
# inside torch/lib/. We want our wheel to DEPEND on torch's libomp at
# runtime, not carry its own copy. If we let delocate bundle libomp into
# sparselab/.dylibs/, there are TWO copies of libomp in the process
# (torch's + ours) and OpenMP's runtime aborts the process (SIGABRT
# on init, observed as exit code -6 in the smoke test).
#
# Strategy:
#   1. Run our custom repair script (scripts/repair_wheel_macos.sh)
#      which:
#        a. Runs delocate in list-only mode to confirm libomp is the
#           only delocatable dep (or errors loudly if something else
#           would be bundled).
#        b. Calls delocate-wheel with --exclude libomp.dylib so no lib
#           is bundled and no install-name rewrite happens.
#        c. Rewrites our _core.so's libomp install name to
#           @rpath/libomp.dylib so the dynamic loader searches all
#           rpaths at runtime.
#        d. Ensures our rpath list includes @loader_path/../../torch/lib
#           so torch's libomp is findable from an installed wheel.
#   2. At runtime, sparselab/__init__.py imports torch FIRST, which
#      loads torch's libomp. When _core.so loads, its @rpath/libomp.dylib
#      lookup resolves to the already-loaded torch libomp. One copy in
#      the process. No collision.
# The leading 'bash' is needed because cibuildwheel runs repair in a
# shell, but doesn't give the repair command execute permissions on
# user files. Bash reads the script explicitly.
#
# Path: $GITHUB_WORKSPACE is set by GitHub Actions to the absolute path
# of the checked-out repo. We use it instead of cibuildwheel's
# {project} / {package} placeholders because those weren't being
# substituted in repair-wheel-command on v2.21/v2.22 (observed as
# 'No such file or directory: {package}/scripts/repair_wheel_macos.sh').
# Using $GITHUB_WORKSPACE sidesteps the placeholder issue entirely.
repair-wheel-command = [
    "bash $GITHUB_WORKSPACE/scripts/repair_wheel_macos.sh {wheel} {dest_dir} {delocate_archs}"
]

# ─── Linux-specific configuration ─────────────────────────────────
[tool.cibuildwheel.linux]
# manylinux_2_28 (Rocky 8) — the current recommended manylinux base.
# Ships GCC 12, libstdc++.so.6 compatible with most modern Linux.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
# libomp equivalent on Linux is libgomp, which ships with gcc. No
# extra install needed inside the manylinux container — it's already
# there. We do need torch at build time so setup.py links cleanly.
before-build = [
    "pip install torch>=2.8",
]
